--- a/MoqBug.Tests/MoqBug.Tests.csproj
+++ b/MoqBug.Tests/MoqBug.Tests.csproj
@@ -41,6 +41,10 @@
       <HintPath>..\packages\AmbientContext.DateTimeService.2.1.0\lib\net45\AmbientContext.DateTimeService.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="AmbientContext.LogService.Serilog, Version=0.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\AmbientContext.LogService.Serilog.1.0.0\lib\net45\AmbientContext.LogService.Serilog.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
       <Private>True</Private>
@@ -59,6 +63,10 @@
     </Reference>
     <Reference Include="Ploeh.AutoFixture.Xunit2, Version=3.50.2.0, Culture=neutral, PublicKeyToken=b24654c590009d4f, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoFixture.Xunit2.3.50.2\lib\net45\Ploeh.AutoFixture.Xunit2.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+      <HintPath>..\packages\Serilog.2.2.0\lib\net45\Serilog.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -84,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Customizations\DateTimeFixture.cs" />
+    <Compile Include="Customizations\LogFixture.cs" />
     <Compile Include="MessageWriterTests.cs" />
     <Compile Include="Customizations\AutoMoqDataAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
