--- a/MoqBug.Tests/packages.config
+++ b/MoqBug.Tests/packages.config
@@ -2,11 +2,13 @@
 <packages>
   <package id="AmbientContext" version="2.0.0" targetFramework="net46" />
   <package id="AmbientContext.DateTimeService" version="2.1.0" targetFramework="net46" />
+  <package id="AmbientContext.LogService.Serilog" version="1.0.0" targetFramework="net46" />
   <package id="AutoFixture" version="3.50.2" targetFramework="net46" />
   <package id="AutoFixture.AutoMoq" version="3.50.2" targetFramework="net46" />
   <package id="AutoFixture.Xunit2" version="3.50.2" targetFramework="net46" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Moq" version="4.5.29" targetFramework="net46" />
+  <package id="Serilog" version="2.2.0" targetFramework="net46" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
   <package id="xunit.core" version="2.1.0" targetFramework="net46" />
   <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net46" />
