--- a/MoqBug/packages.config
+++ b/MoqBug/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="AmbientContext" version="2.0.0" targetFramework="net46" />
   <package id="AmbientContext.DateTimeService" version="2.1.0" targetFramework="net46" />
+  <package id="AmbientContext.LogService.Serilog" version="1.0.0" targetFramework="net46" />
+  <package id="Serilog" version="2.2.0" targetFramework="net46" />
 </packages>
